добавлено дофигища функционала, улучшен дизайн, заделаны дыры в существующих функционалах (типа бронирование на вчерашний день и т.д) улучшена система бронирования, система приглашений, система просмотра встреч и также теперь учитываются все параметры при бронировании каких-то переговорок (количество людей и т.д), добавлен скрипт, создающий шаблонных пользователей и встреч для тестирования (чтобы каждый раз не создавать руками)
